syntax = "proto3";
package servParser;
option go_package = "./servParser";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

message ServParserResponse {
    map<string, ServerInfo> serversInfo = 1;
}

message ServerInfo {
	string Adress = 1;
	string Name = 2;
	string Version = 3;
	int64 MaxOnline = 4;
	int64 Online = 5;
}

service ServParserService {
    rpc GetServersInfo(google.protobuf.Empty) returns (ServParserResponse) {
        option (google.api.http) = {
            get: "/servers"
        };
    }
}